docs/1.130/compute/v1beta1/computeNodeGroup.md
---
permalink: /1.130/compute/v1beta1/computeNodeGroup/
---

# compute.v1beta1.computeNodeGroup



## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDescription(description)`](#fn-specwithdescription)
  * [`fn withInitialSize(initialSize)`](#fn-specwithinitialsize)
  * [`fn withMaintenancePolicy(maintenancePolicy)`](#fn-specwithmaintenancepolicy)
  * [`fn withResourceID(resourceID)`](#fn-specwithresourceid)
  * [`fn withSize(size)`](#fn-specwithsize)
  * [`fn withZone(zone)`](#fn-specwithzone)
  * [`obj spec.autoscalingPolicy`](#obj-specautoscalingpolicy)
    * [`fn withMaxNodes(maxNodes)`](#fn-specautoscalingpolicywithmaxnodes)
    * [`fn withMinNodes(minNodes)`](#fn-specautoscalingpolicywithminnodes)
    * [`fn withMode(mode)`](#fn-specautoscalingpolicywithmode)
  * [`obj spec.maintenanceWindow`](#obj-specmaintenancewindow)
    * [`fn withStartTime(startTime)`](#fn-specmaintenancewindowwithstarttime)
  * [`obj spec.nodeTemplateRef`](#obj-specnodetemplateref)
    * [`fn withExternal(external)`](#fn-specnodetemplaterefwithexternal)
    * [`fn withName(name)`](#fn-specnodetemplaterefwithname)
    * [`fn withNamespace(namespace)`](#fn-specnodetemplaterefwithnamespace)
  * [`obj spec.shareSettings`](#obj-specsharesettings)
    * [`fn withProjectMap(projectMap)`](#fn-specsharesettingswithprojectmap)
    * [`fn withProjectMapMixin(projectMap)`](#fn-specsharesettingswithprojectmapmixin)
    * [`fn withShareType(shareType)`](#fn-specsharesettingswithsharetype)
    * [`obj spec.shareSettings.projectMap`](#obj-specsharesettingsprojectmap)
      * [`obj spec.shareSettings.projectMap.idRef`](#obj-specsharesettingsprojectmapidref)
        * [`fn withExternal(external)`](#fn-specsharesettingsprojectmapidrefwithexternal)
        * [`fn withName(name)`](#fn-specsharesettingsprojectmapidrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specsharesettingsprojectmapidrefwithnamespace)
      * [`obj spec.shareSettings.projectMap.projectIdRef`](#obj-specsharesettingsprojectmapprojectidref)
        * [`fn withExternal(external)`](#fn-specsharesettingsprojectmapprojectidrefwithexternal)
        * [`fn withName(name)`](#fn-specsharesettingsprojectmapprojectidrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specsharesettingsprojectmapprojectidrefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ComputeNodeGroup

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec



### fn spec.withDescription

```ts
withDescription(description)
```

"Immutable. An optional textual description of the resource."

### fn spec.withInitialSize

```ts
withInitialSize(initialSize)
```

"Immutable. The initial number of nodes in the node group. One of 'initial_size' or 'size' must be specified."

### fn spec.withMaintenancePolicy

```ts
withMaintenancePolicy(maintenancePolicy)
```

"Immutable. Specifies how to handle instances when a node in the group undergoes maintenance. Set to one of: DEFAULT, RESTART_IN_PLACE, or MIGRATE_WITHIN_NODE_GROUP. The default value is DEFAULT."

### fn spec.withResourceID

```ts
withResourceID(resourceID)
```

"Immutable. Optional. The name of the resource. Used for creation and acquisition. When unset, the value of `metadata.name` is used as the default."

### fn spec.withSize

```ts
withSize(size)
```

"Immutable. The total number of nodes in the node group. One of 'initial_size' or 'size' must be specified."

### fn spec.withZone

```ts
withZone(zone)
```

"Immutable. Zone where this node group is located."

## obj spec.autoscalingPolicy

"Immutable. If you use sole-tenant nodes for your workloads, you can use the node\ngroup autoscaler to automatically manage the sizes of your node groups."

### fn spec.autoscalingPolicy.withMaxNodes

```ts
withMaxNodes(maxNodes)
```

"Immutable. Maximum size of the node group. Set to a value less than or equal\nto 100 and greater than or equal to min-nodes."

### fn spec.autoscalingPolicy.withMinNodes

```ts
withMinNodes(minNodes)
```

"Immutable. Minimum size of the node group. Must be less\nthan or equal to max-nodes. The default value is 0."

### fn spec.autoscalingPolicy.withMode

```ts
withMode(mode)
```

"Immutable. The autoscaling mode. Set to one of the following:\n  - OFF: Disables the autoscaler.\n  - ON: Enables scaling in and scaling out.\n  - ONLY_SCALE_OUT: Enables only scaling out.\n  You must use this mode if your node groups are configured to\n  restart their hosted VMs on minimal servers. Possible values: [\"OFF\", \"ON\", \"ONLY_SCALE_OUT\"]."

## obj spec.maintenanceWindow

"Immutable. contains properties for the timeframe of maintenance."

### fn spec.maintenanceWindow.withStartTime

```ts
withStartTime(startTime)
```

"Immutable. instances.start time of the window. This must be in UTC format that resolves to one of 00:00, 04:00, 08:00, 12:00, 16:00, or 20:00. For example, both 13:00-5 and 08:00 are valid."

## obj spec.nodeTemplateRef

"The node template to which this node group belongs."

### fn spec.nodeTemplateRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `selfLink` field of a `ComputeNodeTemplate` resource."

### fn spec.nodeTemplateRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.nodeTemplateRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.shareSettings

"Immutable. Share settings for the node group."

### fn spec.shareSettings.withProjectMap

```ts
withProjectMap(projectMap)
```

"Immutable. A map of project id and project config. This is only valid when shareType's value is SPECIFIC_PROJECTS."

### fn spec.shareSettings.withProjectMapMixin

```ts
withProjectMapMixin(projectMap)
```

"Immutable. A map of project id and project config. This is only valid when shareType's value is SPECIFIC_PROJECTS."

**Note:** This function appends passed data to existing values

### fn spec.shareSettings.withShareType

```ts
withShareType(shareType)
```

"Immutable. Node group sharing type. Possible values: [\"ORGANIZATION\", \"SPECIFIC_PROJECTS\", \"LOCAL\"]."

## obj spec.shareSettings.projectMap

"Immutable. A map of project id and project config. This is only valid when shareType's value is SPECIFIC_PROJECTS."

## obj spec.shareSettings.projectMap.idRef

"The key of this project config in the parent map."

### fn spec.shareSettings.projectMap.idRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `name` field of a `Project` resource."

### fn spec.shareSettings.projectMap.idRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.shareSettings.projectMap.idRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.shareSettings.projectMap.projectIdRef

"The project id/number should be the same as the key of this project\nconfig in the project map."

### fn spec.shareSettings.projectMap.projectIdRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `name` field of a `Project` resource."

### fn spec.shareSettings.projectMap.projectIdRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.shareSettings.projectMap.projectIdRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"